--- a/templates/addfile.html
+++ b/templates/addfile.html
@@ -82,7 +82,7 @@
     </style>
     
     <center>
-        <!-- Display uploaded file information at the top of the page -->
+        <p><strong>لتحميل نموذج للملف المراد رفعة </strong>  <a href="/static/نموذج للملف المرفوع.csv">اضغط هنا</a></p>
         <div class="file-info" id="fileInfo" style="display: none;">
             <p><strong>File Name:</strong> <span id="fileName"></span></p>
             <p><strong>File Size:</strong> <span id="fileSize"></span> bytes</p>
