--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -179,7 +179,7 @@
                 </tr>
             </thead>
             <tbody>
-              <tr><td>شحنة جديدة</td><td>{{ s1 }}</td></tr>
+              <tr><td>كل الشحنات</td><td>{{ s1 }}</td></tr>
               <tr><td>تم استلامها</td><td>{{ s2 }}</td></tr>
               <tr><td>تم توصيل الشحنة</td><td>{{ s3 }}</td></tr>
 
