--- a/templates/addfile.html
+++ b/templates/addfile.html
@@ -82,7 +82,7 @@
     </style>
     
     <center>
-        <p><strong>لتحميل نموذج للملف المراد رفعة </strong>  <a href="/static/نموذج للملف المرفوع.csv">اضغط هنا</a></p>
+        <p><strong>لتحميل نموذج للملف المراد رفعة </strong>  <a href="/static/SpeedLink.xlsx">اضغط هنا</a></p>
         <div class="file-info" id="fileInfo" style="display: none;">
             <p><strong>File Name:</strong> <span id="fileName"></span></p>
             <p><strong>File Size:</strong> <span id="fileSize"></span> bytes</p>
@@ -93,7 +93,7 @@
         <form method="POST" action="/upload" enctype="multipart/form-data">
             <div class="upload-container" id="form2" onclick="uploadFile()">
                 <label for="fileInput" class="upload-text">Drag and drop your files here or click to select files.</label>
-                <input type="file" id="fileInput" name="file" style="display: none;" accept=".csv">
+                <input type="file" id="fileInput" name="file" style="display: none;" accept=".csv ,.xlsx">
                 <span class="upload-button">Choose File</span>
             </div>
             <!-- Add a separate submit button for the form -->
