--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,15 @@
 		<title>Speed Link</title>
 
 	</head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P7FMR4JY7V"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P7FMR4JY7V');
+</script>
 	<style>
 		@import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@200;300;400;500;700;800;900&display=swap');
 :root {
