--- a/templates/product.html
+++ b/templates/product.html
@@ -96,7 +96,7 @@
             </div>
             <div class="header-content">
                 {% if session.user_type == 'delivery' or session.user_type == 'admin' or session.user_type == 'shipper'%}
-
+                <a href="/dashboard" class="cta-btn" style="background-color:rgb(0, 251, 255);">لوحت التحكم</a>
                 <a href="/stopshipping/{{ info.id }}" class="cta-btn" style="background-color:red;">إيقاف الشحن</a> {% endif %}
             </div>
         </header>
@@ -105,7 +105,7 @@
             <div class="section">
                 <h1>معلومات العميل</h1>
                 <div class="barcode">
-                    <p>{{ info.barcode }}</p>
+                    <p class="barcode">{{ info.barcode }}</p>
                 </div>
                 <br>
                 <p><strong>الاسم:</strong>{{ info.recipient_name }}</p>
